# LBSC

./: .gitmodules  LICENSE  LRB_WINDOW_TUNING.md  README.md
FPDB/normal-cache/: CMakeLists.txt
FPDB/normal-cache/src/: BeladyCachingPolicy.cpp  BeladySizeCostCachingPolicy.cpp  CachingPolicy.cpp  FBRCachingPolicy.cpp  FBRSCachingPolicy.cpp  Globals.cpp  LRUCachingPolicy.cpp  LearningCachingPolicy.cpp  SegmentCache.cpp  SegmentData.cpp  SegmentKey.cpp  SegmentMetadata.cpp  SegmentRange.cpp  WFBRCachingPolicy.cpp
FPDB/normal-cache/test/: CacheTest.cpp  Globals.h  MainTest.cpp
FPDB/normal-connector/src/: Catalogue.cpp  CatalogueEntry.cpp  Connector.cpp  MiniCatalogue.cpp
FPDB/normal-core/src/: LocalOperatorDirectory.cpp  LocalOperatorDirectoryEntry.cpp  Operator.cpp  OperatorActor.cpp  OperatorActor2.cpp  OperatorConnection.cpp  OperatorContext.cpp  OperatorDirectory.cpp  OperatorDirectoryEntry.cpp  OperatorManager.cpp  OperatorRelationshipType.cpp
FPDB/normal-core/test/: CacheTest.cpp  Globals.h  MainTest.cpp  OperatorTest.cpp  SampleOperator.cpp  SampleOperator.h
FPDB/normal-expression-gandiva/src/: Add.cpp  And.cpp  BinaryExpression.cpp  Cast.cpp  Column.cpp  Divide.cpp  EqualTo.cpp  Expression.cpp  Filter.cpp  Globals.cpp  GreaterThan.cpp  GreaterThanOrEqualTo.cpp  LessThan.cpp  LessThanOrEqualTo.cpp  Multiply.cpp  NumericLiteral.cpp  Or.cpp  Projector.cpp  StringLiteral.cpp  Subtract.cpp
FPDB/normal-expression-gandiva/test/: BinaryExpressionTest.cpp  CastTest.cpp  GandivaFunctionRegistryTest.cpp  Globals.h  MainTest.cpp  MultiplyTest.cpp  TestUtil.cpp  TestUtil.h  ThreadTest.cpp
FPDB/normal-expression/src/: Expression.cpp  Filter.cpp  Globals.h  Projector.cpp
FPDB/normal-plan/src/: LogicalPlan.cpp  PhysicalPlan.cpp  Planner.cpp
FPDB/normal-pushdown/: CMakeLists.txt
FPDB/normal-pushdown/bench/: CSVtoArrowParserBenchmark.cpp  FilterBenchmark.cpp  Globals.h  GroupBenchmark.cpp  HashJoinBenchmark.cpp  MainBenchmark.cpp  ParquetBenchmark.cpp  ShuffleBenchmark.cpp
FPDB/normal-pushdown/src/: AWSClient.cpp  Util.cpp
FPDB/normal-pushdown/test/: AggregateTest.cpp  BloomJoinTest.cpp  CacheTest.cpp  ConnectionTest.cpp  FileScanTest.cpp  FilterTest.cpp  Globals.h  GroupTest.cpp  JoinTest.cpp  MainTest.cpp  MergeTest.cpp  S3SelectScanTest.cpp  ShuffleTest.cpp  SortTest.cpp  TestUtil.cpp  TestUtil.h
FPDB/normal-sql/src/: Interpreter.cpp
FPDB/normal-ssb/: CMakeLists.txt
FPDB/normal-ssb/bench/: Globals.h  Main.cpp  SSBBenchmarkQuery1_1FileSF0_01.cpp  SSBBenchmarkQuery1_1FileSF1.cpp
FPDB/normal-ssb/bench/ATTIC/: SSBBenchmark.cpp  SSBNanoBenchmark.cpp
FPDB/normal-ssb/experiment/: ExperimentMain.cpp  ExperimentUtil.cpp  ExperimentUtil.h  MathModelTest.cpp  MathModelTest.h  Tests.cpp  Tests.h
FPDB/normal-ssb/include/normal/ssb/: Globals.h  SQLite3.h  SSBSchema.h  SqlGenerator.h  SqlTransformer.h  TestUtil.h
FPDB/normal-ssb/include/normal/ssb/common/: Operators.h
FPDB/normal-ssb/include/normal/ssb/query1_1/: LocalFileSystemQueries.h  LocalFileSystemTests.h  Operators.h  S3SelectQueries.h  S3SelectTests.h  SQL.h
FPDB/normal-ssb/include/normal/ssb/query2_1/: LocalFileSystemQueries.h  LocalFileSystemTests.h  Operators.h  SQL.h
FPDB/normal-ssb/src/: GenerateSqlFile.cpp  SQLite3.cpp  SSBSchema.cpp  SqlGenerator.cpp  SqlTransformer.cpp  TestUtil.cpp
FPDB/normal-ssb/src/common/: Operators.cpp
FPDB/normal-ssb/src/query1_1/: LocalFileSystemQueries.cpp  LocalFileSystemTests.cpp  Operators.cpp  S3SelectQueries.cpp  S3SelectTests.cpp  SQL.cpp
FPDB/normal-ssb/src/query2_1/: LocalFileSystemQueries.cpp  LocalFileSystemTests.cpp  Operators.cpp  SQL.cpp
FPDB/normal-ssb/test/: Globals.h  Main.cpp  MiscTest.cpp  SSBQuery1_1FileTestSF0_01.cpp  SSBQuery1_1FileTestSF1.cpp  SSBQuery1_1S3HybridTestSF0_01.cpp  SSBQuery1_1S3PullUpTestSF0_01.cpp  SSBQuery1_1S3PushDownTestSF0_01.cpp  SSBQuery1_1SQLTest.cpp  SSBQuery2_1FileTestSF0_01.cpp  SSBTestQuery1_1FileParquetSF0_01.cpp
FPDB/normal-ssb/tool/: Main.cpp
FPDB/normal-tuple/ATTIC/: Int64ArrayHasher.cpp  Int64ArrayHasher.h  StringArrayHasher.cpp  StringArrayHasher.h
FPDB/normal-tuple/bench/: ArrayAppenderBench.cpp  Globals.h  Main.cpp
FPDB/normal-tuple/src/: ArrayAppender.cpp  ArrayAppenderWrapper.cpp  ArrayHasher.cpp  Column.cpp  ColumnBuilder.cpp  ColumnIndex.cpp  ColumnIterator.cpp  ColumnName.cpp  Converter.cpp  FileReader.cpp  FileReaderBuilder.cpp  Sample.cpp  Scalar.cpp  Schema.cpp  TupleSet.cpp  TupleSet2.cpp  TupleSetIndex.cpp  TupleSetIndexFinder.cpp  TupleSetIndexFinderWrapper.cpp  TupleSetIndexWrapper.cpp  TupleSetShowOptions.cpp
FPDB/normal-tuple/test/: ArrayAppenderTest.cpp  CSVTest.cpp  Globals.h  ParquetTest.cpp  TupleSetIndexTest.cpp  TupleTest.cpp
FPDB/normal-util/test/: Globals.h  MainTest.cpp  TraitsTest.cpp
config/: trace_params.yaml
include/webcachesim/: api.h  bloom_filter.h  common.h  parallel_cache.h  request.h  simulation.h  simulation_tinylfu.h
include/webcachesim/caches/: belady_sample_size.h  hyperbolic.h  lecar.h  lr.h  lrb.h  static_parallel_cache.h
integration/: webcachesim_cli.cpp
python-package/pywebcachesim/: parser.py  runner.py
simulator/: .gitignore  .gitmodules  INSTALL.md
simulator/config/: job_dev.yaml
simulator/docker/: Dockerfile
simulator/include/webcachesim/: annotate.h  cache.h  file_hash.h  pickset.h  rss.h  trace_sanity_check.h  utils.h
simulator/integration/: CMakeLists.txt
simulator/python-package/: setup.py
simulator/python-package/pywebcachesim/: get_best_memory_window.py  get_task.py  lrb_window_search.py  simulate.py
simulator/scripts/: install.sh
simulator/src/: CMakeLists.txt  api.cpp  simulation.cpp  simulation_tinylfu.cpp
simulator/src/caches/: belady.cpp  belady_sample.cpp  belady_sample_size.cpp  belady_sample_size_cost.cpp  belady_sample_size_cost_multi.cpp  belady_size.cpp  belady_size_cost.cpp  binary_relaxed_belady.cpp  cacheus.cpp  gd_variants.cpp  lbsc.cpp  lecar.cpp  lr.cpp  lrb.cpp  ucb.cpp  (+6 more)
src/: rss.cpp  trace_sanity_check.cpp
src/caches/: annotate.cpp  hyperbolic.cpp  percent_relaxed_belady.cpp  random_variants.cpp
(+388 files in other folders)
